Case 26444: Fixing menu visibility once logged in

--- a/themes/ukcloudawards/sass/navigation.scss
+++ b/themes/ukcloudawards/sass/navigation.scss
@@ -109,3 +109,8 @@ li a.active {
  */
 .block-menu-block {
 }
+.logged-in {
+  .region-header {
+    overflow: visible;
+  }
+}
